--- a/owm/templates/owm/sidebar_menu.html
+++ b/owm/templates/owm/sidebar_menu.html
@@ -4,7 +4,7 @@
     <div class="menu-item menu-sub-indention menu-accordion" data-kt-menu-trigger="click">
         <!--begin::Menu link-->
         <a href="#" class="menu-link py-3">
-            <span class="menu-title">Общее</span>
+            <span class="menu-title">МойСклад</span>
             <span class="menu-arrow"></span>
         </a>
         <!--end::Menu link-->
@@ -34,11 +34,11 @@
             <!--begin::Menu item-->
             <div class="menu-item menu-accordion" data-kt-menu-trigger="click">
                 <!--begin::Menu link-->
-                <a href="#" class="menu-link py-3">
+                <a href="{% url 'autoupdate' %}" class="menu-link py-3">
                     <span class="menu-bullet">
                         <span class="bullet bullet-dot"></span>
                     </span>
-                    <span class="menu-title">Example Link</span>
+                    <span class="menu-title">Автообновление</span>
                     <span class="menu-arrow"></span>
                 </a>
                 <!--end::Menu link-->
