--- a/owm/templates/owm/sidebar_menu.html
+++ b/owm/templates/owm/sidebar_menu.html
@@ -31,13 +31,13 @@
             <!--end::Menu item-->
 
                         <div class="menu-item">
-                <a href="{% url 'autoupdate' %}" class="menu-link py-3">
-                    <span class="menu-bullet">
-                        <span class="bullet bullet-dot"></span>
-                    </span>
-                    <span class="menu-title">Автообновление</span>
-                </a>
-            </div>
+                            <a href="{% url 'autoupdate' %}" class="menu-link py-3">
+                                <span class="menu-bullet">
+                                    <span class="bullet bullet-dot"></span>
+                                </span>
+                                <span class="menu-title">Автообновление</span>
+                            </a>
+                        </div>
 
             <!--begin::Menu item-->
             <div class="menu-item menu-accordion" data-kt-menu-trigger="click">
@@ -46,7 +46,7 @@
                     <span class="menu-bullet">
                         <span class="bullet bullet-dot"></span>
                     </span>
-                    <span class="menu-title">zczcxc</span>
+                    <span class="menu-title">Автообновление</span>
                     <span class="menu-arrow"></span>
                 </a>
                 <!--end::Menu link-->
@@ -59,18 +59,18 @@
                             <span class="menu-bullet">
                                 <span class="bullet bullet-dot"></span>
                             </span>
-                            <span class="menu-title">Example Link</span>
+                            <span class="menu-title">Синхронизация</span>
                         </a>
                     </div>
                     <!--end::Menu item-->
 
                     <!--begin::Menu item-->
                     <div class="menu-item">
-                        <a href="#" class="menu-link py-3">
+                        <a href="{% url 'autoupdate_settings' %}" class="menu-link py-3">
                             <span class="menu-bullet">
                                 <span class="bullet bullet-dot"></span>
                             </span>
-                            <span class="menu-title">Example Link</span>
+                            <span class="menu-title">Настройки</span>
                         </a>
                     </div>
                     <!--end::Menu item-->
