--- a/owm/templates/owm/sidebar_menu.html
+++ b/owm/templates/owm/sidebar_menu.html
@@ -139,6 +139,15 @@
                     <span class="menu-title">Поставка FBO OZON</span>
                 </a>
             </div>
+            <div class="menu-item">
+                <a href="{% url 'otpravlenie_ozon' %}" class="menu-link py-3">
+                    <span class="menu-bullet">
+                        <span class="bullet bullet-dot"></span>
+                    </span>
+                    <span class="menu-title">Отправления FBS OZON</span>
+                </a>
+            </div>
+
             <!--end::Menu item-->
         </div>
         <!--end::Menu sub-->
@@ -175,67 +184,6 @@
                 </a>
             </div>
             <!--end::Menu item-->
-
-            <!--begin::Menu item-->
-            <div class="menu-item menu-accordion" data-kt-menu-trigger="click">
-                <!--begin::Menu link-->
-                <a href="#" class="menu-link py-3">
-                    <span class="menu-bullet">
-                        <span class="bullet bullet-dot"></span>
-                    </span>
-                    <span class="menu-title">Example Link</span>
-                    <span class="menu-arrow"></span>
-                </a>
-                <!--end::Menu link-->
-
-                <!--begin::Menu sub-->
-                <div class="menu-sub menu-sub-accordion pt-3">
-                    <!--begin::Menu item-->
-                    <div class="menu-item">
-                        <a href="#" class="menu-link py-3">
-                            <span class="menu-bullet">
-                                <span class="bullet bullet-dot"></span>
-                            </span>
-                            <span class="menu-title">Example Link</span>
-                        </a>
-                    </div>
-                    <!--end::Menu item-->
-
-                    <!--begin::Menu item-->
-                    <div class="menu-item">
-                        <a href="#" class="menu-link py-3">
-                            <span class="menu-bullet">
-                                <span class="bullet bullet-dot"></span>
-                            </span>
-                            <span class="menu-title">Example Link</span>
-                        </a>
-                    </div>
-                    <!--end::Menu item-->
-
-                    <!--begin::Menu item-->
-                    <div class="menu-item">
-                        <a href="#" class="menu-link py-3">
-                            <span class="menu-bullet">
-                                <span class="bullet bullet-dot"></span>
-                            </span>
-                            <span class="menu-title">Example Link</span>
-                        </a>
-                    </div>
-                    <!--end::Menu item-->
-                </div>
-                <!--end::Menu sub-->
-            </div>
-            <!--end::Menu item-->
-
-            <!--begin::Menu item-->
-            <div class="menu-item">
-                <a href="#" class="menu-link py-3">
-                    <span class="menu-bullet">
-                        <span class="bullet bullet-dot"></span>
-                    </span>
-                    <span class="menu-title">Example Link</span>
-                </a>
-            </div>
             <!--end::Menu item-->
         </div>
         <!--end::Menu sub-->
