--- a/owm/templates/owm/autoupdate_settings.html
+++ b/owm/templates/owm/autoupdate_settings.html
@@ -55,12 +55,47 @@
 
     <!--begin::Wrapper-->
     <div class="d-flex flex-column">
-          <div class="form-check form-switch">
-              <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" {% if active %}checked="checked"{% endif %} name="mp_reserv">
-              <label class="form-check-label" for="flexSwitchCheckDefault">
-                <b>Учитывая уже созданные заказы на маркетплейсах, но не отгруженные</b>
-              </label>
-          </div>
+            {% if sync_update %}
+            <div class="alert alert-primary d-flex align-items-center p-5">
+                <!--begin::Icon-->
+                <i class="ki-duotone ki-shield-tick fs-2hx text-success me-4"><span class="path1"></span><span class="path2"></span></i>
+                <!--end::Icon-->
+
+                <!--begin::Wrapper-->
+                <div class="d-flex flex-column">
+                    <!--begin::Title-->
+                    <h4 class="mb-1 text-dark">Обновлено</h4>
+                    <!--end::Title-->
+
+                    <!--begin::Content-->
+                    <span>
+
+                     <h2>WB</h2>
+                        {% if update_data.wb.code == 204 %}
+                            <p>Данные обновлены успешно</p>
+                        {% elif update_data.wb.code == 200 %}
+                            <p>Данные обновлены с результатами:</p>
+                            <pre>{{ update_data.wb.json|json_script }}</pre> <!-- Важно! Используем json_script -->
+                        {% else %}
+                            <p>Ошибка обновления: код {{ update_data.wb.code }} - {{ update_data.wb.json|escape }}</p>
+                        <!-- Используйте escape, чтобы избежать XSS -->
+                            {% if update_data.wb.json|length > 0 %}
+                                <pre>{{ update_data.wb.json|json_script }}</pre>
+                            {% endif %}
+                        {% endif %}
+                     <h2>OZON</h2>
+                     {{ update_data.ozon }}<br><br>
+                     <h2>YANDEX</h2>
+                     {{ update_data.yandex }}<br><br>
+                    <!--end::Content-->
+                </div>
+
+                <!--end::Wrapper-->
+            </div>
+    {% endif %}
+
+
+
         <!--begin::Content-->
             <span>Сформированные, но ещё не отправленные заказы на маркетплейсах по модели FBS, которые должны быть отгружены с вашего склада.
                 Эти заказы будут учитываться при синхронизации остатков: сначала из остатков в МойСклад будут вычтены эти заказы,
@@ -78,16 +113,7 @@
 
     <!--end::Wrapper-->
 </div>
-    <br><br>
-<!--end::Alert-->
-    {% if sync_update %}
-        <h2>ozon</h2>
-        {{ update_data.ozon }}<br><br>
-        <h2>wb</h2>
-        {{ update_data.wb }}<br><br>
-        <h2>yandex</h2>
-        {{ update_data.yandex }}
-    {% endif %}
+
     </form>
 {% endblock %}
 
