--- a/owm/templates/owm/sidebar_menu.html
+++ b/owm/templates/owm/sidebar_menu.html
@@ -221,11 +221,24 @@
         <div class="menu-sub menu-sub-accordion pt-3">
             <!--begin::Menu item-->
             <div class="menu-item">
-                <a href="{% url 'create' %}" class="menu-link py-3">
+                <a href="{% url 'settings_api' %}" class="menu-link py-3">
                     <span class="menu-bullet">
                         <span class="bullet bullet-dot"></span>
                     </span>
                     <span class="menu-title">Api ключи</span>
+                </a>
+            </div>
+        </div>
+        <!--end::Menu sub-->
+         <!--begin::Menu sub-->
+        <div class="menu-sub menu-sub-accordion pt-3">
+            <!--begin::Menu item-->
+            <div class="menu-item">
+                <a href="{% url 'settings_contragent' %}" class="menu-link py-3">
+                    <span class="menu-bullet">
+                        <span class="bullet bullet-dot"></span>
+                    </span>
+                    <span class="menu-title">Контрагенты</span>
                 </a>
             </div>
         </div>
