--- a/templates/base.html
+++ b/templates/base.html
@@ -851,7 +851,7 @@
 					</div>
 					<!--end::Header-->
 					<!--begin::Content wrapper-->
-					<div class="d-flex flex-column-fluid">
+					<div class="flex-column flex-row-fluid ">
 						<!--begin::Aside-->
 						<div id="kt_aside" class="aside card" data-kt-drawer="true" data-kt-drawer-name="aside" data-kt-drawer-activate="{default: true, lg: false}" data-kt-drawer-overlay="true" data-kt-drawer-width="{default:'200px', '300px': '250px'}" data-kt-drawer-direction="start" data-kt-drawer-toggle="#kt_aside_toggle">
 							<!--begin::Aside menu-->
