--- a/owm/templates/owm/settings/settings_contragent.html
+++ b/owm/templates/owm/settings/settings_contragent.html
@@ -4,28 +4,78 @@
     {% include 'include/_sidebar_owm.html' %}
 {% endblock %}
 {% block content %}
+
+    {{ metadata }}
+    <h1>Текущие данные</h1>
+    Организация: {{ meta.organization }}<br>
+    Ozon: {{ meta.ozon }}<br>
+    Wb: {{ meta.wb }}<br>
+    Yandex: {{ meta.yandex }}<br>
+
+    <h1>Указать данные</h1>
     <form action="#" method="POST">
     {% csrf_token %}
-        <div class="input-group mb-5">
-            <span class="input-group-text" id="basic-addon3">Мой склад api</span>
-            <input type="text" class="form-control" name="moysklad_api" aria-describedby="basic-addon3" value="{{ api_list_current_user.moysklad_api }}"/>
+<div class="row g-5 gx-xl-10 mb-5 mb-xl-10">
+    <div class="col-md-6 col-lg-6 col-xl-6 col-xxl-3 mb-md-5 mb-xl-10">
+        <div class="card-body d-flex flex-column justify-content-end pe-0">
+            <div class="container">
+                <div class="row align-items-center mb-2">
+                    <div class="col-3 text-end">
+                        <label for="organization-select" class="form-label">Организация:</label>
+                    </div>
+                    <div class="col-6">
+                        <select id="organization-select" name="organization_select" class="form-select" data-placeholder="Организация" style="width: 100% !important;">
+                            <option></option>
+                            {% for item in orglist %}
+                                <option value="{{ item.id }}">{{ item.name }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="row align-items-center mb-2">
+                    <div class="col-3 text-end">
+                        <label for="ozon-select" class="form-label">Озон:</label>
+                    </div>
+                    <div class="col-6">
+                        <select id="ozon-select" class="form-select" name="ozon_select" data-placeholder="Ozon" style="width: 100% !important;">
+                            <option></option>
+                            {% for item in agentlist %}
+                                <option value="{{ item.id }}">{{ item.name }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="row align-items-center mb-2">
+                    <div class="col-3 text-end">
+                        <label for="wb-select" class="form-label">ВБ:</label>
+                    </div>
+                    <div class="col-6">
+                        <select id="wb-select" class="form-select" name="wb_select" data-placeholder="WB" style="width: 100% !important;">
+                            <option></option>
+                            {% for item in agentlist %}
+                                <option value="{{ item.id }}">{{ item.name }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="row align-items-center mb-2">
+                    <div class="col-3 text-end">
+                        <label for="yandex-select" class="form-label">Яндекс:</label>
+                    </div>
+                    <div class="col-6">
+                        <select id="yandex-select" class="form-select" data-placeholder="Yandex" style="width: 100% !important;">
+                            <option></option>
+                            {% for item in agentlist %}
+                                <option value="{{ item.id }}">{{ item.name }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+</div>
         </div>
-        <div class="input-group mb-5">
-            <span class="input-group-text" id="basic-addon3">Yandex market api</span>
-            <input type="text" class="form-control" name="yandex_api" aria-describedby="basic-addon3" value="{{ api_list_current_user.yandex_api }}"/>
-        </div>
-        <div class="input-group mb-5">
-            <span class="input-group-text" id="basic-addon3">Wildberries api</span>
-            <input type="text" class="form-control" name="wildberries_api" aria-describedby="basic-addon3" value="{{ api_list_current_user.wildberries_api }}"/>
-        </div>
-        <div class="input-group mb-5">
-            <span class="input-group-text" id="basic-addon3">Ozon client id</span>
-            <input type="text" class="form-control" name="client_id" aria-describedby="basic-addon3" value="{{ api_list_current_user.client_id }}"/>
-        </div>
-        <div class="input-group mb-5">
-            <span class="input-group-text" name="basic-addon3">Ozon api</span>
-            <input type="text" class="form-control" name="ozon_api" aria-describedby="basic-addon3" value="{{ api_list_current_user.ozon_api }}"/>
-        </div>
-    <button type="submit" class="btn btn-primary btn-block">Установить api</button>
+    </div>
+</div>
+
+    <button type="submit" class="btn btn-primary btn-block">Сохранить</button>
     </form>
 {% endblock %}
